# Titan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  batch_simulator_bench.cpp  binding_bench.py  lob_state_bench.cpp  matching_engine_bench.cpp  memory_bench.cpp  scheduler_bench.cpp  shadowlob_bench.cpp  shadowlob_bench2.cpp
include/titan/core/: batch_simulator.hpp  lob_state.hpp  matching_engine.hpp  memory.hpp  scheduler.hpp  state.hpp  types.hpp
src/agents/: avellaneda-stoikov.py  avellaneda_stoikov.py  base_agent.py  fundamental.py  hawkes_process.py  momentum.py  population.py
src/bindings/: python.cpp
src/core/: actions.py  batch_simulator.cpp  distributions.py  engine.py  lob_state.cpp  matching_engine.cpp  memory.cpp  simulation.py  views.py
src/utils/: visualizer.py
tests/: batch_simulator_tests.cpp  binding_tests.py  lob_state_tests.cpp  matching_engine_tests.cpp  memory_tests.cpp  scheduler_tests.cpp  state_tests.cpp
